--- a/birthday.html
+++ b/birthday.html
@@ -114,8 +114,7 @@
            <div class="card-body">
            <p class="card-text">Rose with balloons </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>50$</ins></p>
-           <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button>
+           <p><ins>50$</ins><button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
