--- a/cart.html
+++ b/cart.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
+   <head> <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
          <link rel="icon" href="assets/images/icon.jpeg">
      <link rel="stylesheet" href="assets/css/style.css">
-     <link rel="stylesheet" href="assets/css/media.css">
-    <title>Cart</title>
-</head>
+     <link rel="stylesheet" href="assets/css/media.css"></head>
 <body>
-      <div class="announce">
+   <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
 
@@ -53,90 +51,24 @@
       </div>
     </div>
   </div>
-</nav> 
-<body>
-  <section>
-          <div id="loading">
-    <div class="spinner-border" role="status" >
-      <span class="visually-hidden">Loading</span>
-    </div>
-    <p>Loading...</p>
-  </div>
-      </section>
-    <div id="main-content" >
-    <main>
-      <section>
-  <div class="container my-5">
-  <h2>Your Shopping Cart</h2>
+</nav>
+ <main>
+   <div class="container my-5">
+    <h2 class="mb-4">Your Shopping Cart</h2>
 
-  <table class="table table-bordered align-middle bg-white shadow-sm rounded-3">
-    <thead class="table-light">
-      <tr>
-        <th>Product</th>
-        <th style="width: 120px;">Price</th>
-        <th style="width: 120px;">Quantity</th>
-        <th style="width: 120px;">Total</th>
-        <th style="width: 80px;">Action</th>
-      </tr>
-    </thead>
-    <tbody id="cart-items"></tbody>
-  </table>
+    <div id="cartItems" class="mb-4"></div>
 
-  <div class="d-flex justify-content-between align-items-center mt-3">
-    <div>
-      <button id="clear-cart" class="btn btn-warning">Clear Cart</button>
+    <div class="d-flex justify-content-between align-items-center">
+      <h5>Total Items: <span id="totalItems">0</span></h5>
+      <h5>Total Price: $<span id="totalPrice">0.00</span></h5>
     </div>
-    <div>
-      <strong>Total Items: </strong><span id="total-items">0</span>
-      &nbsp;&nbsp;&nbsp;
-      <strong>Total Price: </strong>$<span id="total-price">0.00</span>
+
+    <div class="mt-4">
+      <button class="btn " onclick="clearCart()">Clear Cart</button>
     </div>
   </div>
-</div>
+ </main>
 
-</section>
-    </main>
-    <footer class="bg-body-tertiary">
-
-  <div class="container">
-  <div class="row gap-5">
-    <div class="col-lg-3 col-md-5 col-sm-12 ">
-      <a href="index.html">
-      <div class="imgFooter">
-        <img src="assets/images/RoseyIcon.jpeg" alt="">
-      </div>
-      </a>
-      <p>One bouquet away from making them smile!</p>
-      <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a><a href="https://www.tiktok.com/download"><i class="fa-brands fa-tiktok"></i></a> <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></div>
-    </div> 
-    <div class="col-lg-2 col-md-5 col-sm-12"> 
-    <ul>
-      <li><p>Shop</p></li>
-      <li><a href="flowers.html">FLowers</a></li>
-      <li><a href="plants.html">plants</a></li>
-      <li><a href="sales.html">Sales</a></li>
-    </ul>
-    </div>
-     <div class="col-lg-2 col-md-5 col-sm-12"> 
-    <ul>
-      <li><p>Help</p></li>
-      <li><a href="AboutUs.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="">+970 567984321</a></li>
-    </ul>
-    </div>
-    <div class="col-lg-3 col-md-5 col-sm-12"> 
-      <form action="">
-      <label for="email">Subscribe For 20% Off, Early Access To Limited Edition Stems, & Useful Care Tips</label>
-      <input type="Email" id="email" placeholder="Your email">
-      <input type="Submit">
-     </form>
-    </div>
-    </div>
-    <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
-</footer>
-</div>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-<script src="assets/js/cart.js" ></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
